--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@fontsource/roboto": "^5.2.9",
     "bcryptjs": "^3.0.3",
     "jsonwebtoken": "^9.0.3",
     "jspdf": "^4.1.0",
